--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>Landing Page</title>
 </head>
 <body>
-    
+    <nav>
+        <label class="logo">Paola's Gallery</label>
+        <ul>
+            <li><a href="">Inicio</a></li>
+            <li><a href="">Acerca de</a></li>
+            <li><a href="">Contacto</a></li>
+            <li><a href="">Servicios</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
