--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>Landing Page</title>
 </head>
 <body>
     <nav>
+        <input type="checkbox" id="check">
+        <label for="check" class="checkbtn">
+            <i class="fas fa-bars"></i>
+        </label>
+        
         <label class="logo">Paola's Gallery</label>
         <ul>
             <li><a href="">Inicio</a></li>
@@ -16,5 +22,12 @@
             <li><a href="">Servicios</a></li>
         </ul>
     </nav>
+
+    <section class="hero">
+        <div class="texto__inicio">
+            <h2>Bienvenido</h2>
+            <h3>A mi página WEB</h3>
+        </div>
+    </section>
 </body>
 </html>
