--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         <label class="logo">Paola's Gallery</label>
         <ul>
             <li><a href="">Inicio</a></li>
-            <li><a href="">Acerca de</a></li>
+            <li><a href="">Galería</a></li>
             <li><a href="">Contacto</a></li>
             <li><a href="">Servicios</a></li>
+            <li><a href="">Mis novias</a></li>
         </ul>
     </nav>
 
@@ -29,5 +30,48 @@
             <h3>A mi página WEB</h3>
         </div>
     </section>
+
+    <h1>Mis novias</h1>
+    <!-- Padre -->
+    <section class="flex_container">
+        <!-- Hijos -->
+            <div class="box__01">
+                Lucy
+            </div>
+            <div class="box__02">
+                Misato
+            </div>
+            <div class="box__03">
+                Fubuki
+            </div>
+            <div class="box__04">
+                Himeno
+            </div>
+    </section> 
+
+    <footer>
+        <div class="footer">
+            <div class="contenido__footer">
+                <a href="#"><i class="fab fa-facebook"></i></a>
+                <a href="#"><i class="fab fa-instagram"></i></a>
+                <a href="#"><i class="fab fa-youtube"></i></a>
+                <a href="#"><i class="fab fa-tiktok"></i></a>
+            </div>
+
+            <div class="contenido__footer">
+                <ul>
+                    <li><a href="#">Acerca de</a></li>
+                    <li><a href="#">Facturación</a></li>
+                    <li><a href="#">Términos y Condiciones</a></li>
+                    <li><a href="#">Contáctame</a></li>
+                </ul>
+            </div>
+            
+            <div class="contenido__footer">
+                Zdenko Abarca © 2024 Zdencoder Todos los derechos reservados
+
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
