--- a/contacto/soporte.html
+++ b/contacto/soporte.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <title>Landing Page</title>
 </head>
@@ -14,12 +14,12 @@
             <i class="fas fa-bars"></i>
         </label>
         
-        <label class="logo">Paola's Gallery</label>
+        <label class="logo">Contacto</label>
         <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="./galeria/trabajos.html">Galería</a></li>
-            <li><a href="./contacto/soporte.html">Contacto</a></li>
-            <li><a href="./servicios/ayuda">Servicios</a></li>
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="../galeria/trabajos.html">Galería</a></li>
+            <li><a href="">Contacto</a></li>
+            <li><a href="../servicios/ayuda.html">Servicios</a></li>
         </ul>
     </nav>
 
