--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
+    <!--Librería Boostrap-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+   
     <title>Landing Page</title>
 </head>
 <body>
@@ -23,12 +27,62 @@
         </ul>
     </nav>
 
-    <section class="hero">
-        <div class="texto__inicio">
-            <h2>Bienvenido</h2>
-            <h3>A mi página WEB</h3>
+    <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-    </section>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="https://i.pinimg.com/564x/c2/26/f6/c226f6f0441239e000d05b6558aa0c8c.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Lucy quitándose chaqueta</h5>
+              <p>Muy sexy la vdd</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://i.pinimg.com/564x/f2/92/47/f2924757aa1f6f2a151e47a6fc274f3a.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Lucy fumando</h5>
+              <p>Tmb muy jot</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="https://i.pinimg.com/564x/41/cf/a1/41cfa1f0553af546e6dd2a3bf70b59ba.jpg" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Lucy riendo</h5>
+              <p>T extraño dharma</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+
+    <div class="contenedor">
+        <div class="contenido__principal">
+            <img src="https://i.pinimg.com/564x/b0/38/c6/b038c60dab2cb7a4babe15e39be21744.jpg" alt="">
+            <div class="texto__caja">
+                <h3>Título</h3>
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Et hic dolorum labore voluptas eos vero doloribus debitis animi odit. 
+                    Labore, fugiat perferendis. 
+                    Repellat velit impedit, maiores at architecto commodi quis.
+                </p>
+
+            </div>
+
+        </div>
+
+    </div>  
 
     <h1>Mis novias</h1>
     <!-- Padre -->
@@ -67,10 +121,13 @@
             </div>
 
             <div class="contenido__footer">
-                Zdenko Abarca © 2024 Zdencoder Todos los derechos reservados
+                Zdenko Abarca © 2024 Zdencode Todos los derechos reservados
 
             </div>
         </div>
     </footer>
+
+    <!--Librería Bootstrap JavaScript-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
