--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="contenido__principal">
             <img src="https://i.pinimg.com/564x/b0/38/c6/b038c60dab2cb7a4babe15e39be21744.jpg" alt="">
             <div class="texto__caja">
-                <h3>Título</h3>
+                <h3></h3>
                 <p>
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                     Et hic dolorum labore voluptas eos vero doloribus debitis animi odit. 
@@ -83,6 +83,47 @@
         </div>
 
     </div>  
+
+
+<!--Contenedor tarjetas-->
+    <div class="contenedor__tarjetas">
+      <div class="tarjeta">
+        <img src="https://i.pinimg.com/564x/2d/91/bf/2d91bf98d31395f4deedeb7787af7f16.jpg" alt="">
+        <div class="contenido__tarjeta">
+          <h1>Título</h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            Et hic dolorum labore voluptas eos vero doloribus debitis animi odit. 
+          </p>
+          <a href="#" class="boton__tarjeta">Ver más</a>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://i.pinimg.com/236x/01/c0/a9/01c0a9858f243085617eb496ea131250.jpg" alt="">
+        <div class="contenido__tarjeta">
+          <h1>Título</h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            Et hic dolorum labore voluptas eos vero doloribus debitis animi odit. 
+          </p>
+          <a href="#" class="boton__tarjeta">Ver más</a>
+        </div>
+      </div>
+
+      <div class="tarjeta">
+        <img src="https://i.pinimg.com/236x/94/c2/96/94c29665eb2782d3796a0750e2a79a60.jpg" alt="">
+        <div class="contenido__tarjeta">
+          <h1>Título</h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+            Et hic dolorum labore voluptas eos vero doloribus debitis animi odit. 
+          </p>
+          <a href="#" class="boton__tarjeta">Ver más</a>
+        </div>
+      </div>
+
+    </div>
 
     <h1>Mis novias</h1>
     <!-- Padre -->
