--- a/index.html
+++ b/index.html
@@ -22,53 +22,22 @@
         <ul>
             <li><a href="#">Inicio</a></li>
             <li><a href="./galeria/trabajos.html">Galería</a></li>
+            <li><a href="./servicios/ayuda.html">Trayectoria</a></li>
             <li><a href="./contacto/soporte.html">Contacto</a></li>
-            <li><a href="./servicios/ayuda">Servicios</a></li>
+            
         </ul>
     </nav>
 
-    <div id="carouselExampleCaptions" class="carousel slide">
-        <div class="carousel-indicators">
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-        </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="https://i.pinimg.com/564x/c2/26/f6/c226f6f0441239e000d05b6558aa0c8c.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Lucy quitándose chaqueta</h5>
-              <p>Muy sexy la vdd</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="https://i.pinimg.com/564x/f2/92/47/f2924757aa1f6f2a151e47a6fc274f3a.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Lucy fumando</h5>
-              <p>Tmb muy jot</p>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img src="https://i.pinimg.com/564x/41/cf/a1/41cfa1f0553af546e6dd2a3bf70b59ba.jpg" class="d-block w-100" alt="...">
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Lucy riendo</h5>
-              <p>T extraño dharma</p>
-            </div>
-          </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+    <section class="hero__principal">
+      <div class="texto__inicio__principal">
+          <h2>NIEBLA</h2>
+          <h3>Obra más reciente</h3>
       </div>
-
+  </section>
+<!--
     <div class="contenedor">
         <div class="contenido__principal">
-            <img src="https://i.pinimg.com/564x/b0/38/c6/b038c60dab2cb7a4babe15e39be21744.jpg" alt="">
+            <img src="./img/paola.jpg" alt="">
             <div class="texto__caja">
                 <h3></h3>
                 <p>
@@ -77,71 +46,110 @@
                     Labore, fugiat perferendis. 
                     Repellat velit impedit, maiores at architecto commodi quis.
                 </p>
-
             </div>
-
         </div>
-
     </div>  
-
+-->
 
 <!--Contenedor tarjetas-->
+    <h1 class="texto__principal">ÚLTIMAS NOTICIAS</h1>
     <div class="contenedor__tarjetas">
       <div class="tarjeta">
-        <img src="https://i.pinimg.com/564x/2d/91/bf/2d91bf98d31395f4deedeb7787af7f16.jpg" alt="">
+        <img src="./img/volcan.jpg" alt="">
         <div class="contenido__tarjeta">
-          <h1>Título</h1>
+          <h1>Museo Leopoldo Flores</h1>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-            Et hic dolorum labore voluptas eos vero doloribus debitis animi odit. 
+            Trabajos expuestos durante el mes de Junio en el museo universitario Leopoldo Flores.
           </p>
           <a href="#" class="boton__tarjeta">Ver más</a>
         </div>
       </div>
 
       <div class="tarjeta">
-        <img src="https://i.pinimg.com/236x/01/c0/a9/01c0a9858f243085617eb496ea131250.jpg" alt="">
+        <img src="./img/alumnos.jpg" alt="">
         <div class="contenido__tarjeta">
-          <h1>Título</h1>
+          <h1>Actividades</h1>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-            Et hic dolorum labore voluptas eos vero doloribus debitis animi odit. 
+            Ejercicio en conjunto sobre la identidad individual y colectiva en espacios académicos. 
           </p>
           <a href="#" class="boton__tarjeta">Ver más</a>
         </div>
       </div>
 
       <div class="tarjeta">
-        <img src="https://i.pinimg.com/236x/94/c2/96/94c29665eb2782d3796a0750e2a79a60.jpg" alt="">
+        <img src="./img/tr1.jpg" alt="">
         <div class="contenido__tarjeta">
-          <h1>Título</h1>
+          <h1>SEP</h1>
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-            Et hic dolorum labore voluptas eos vero doloribus debitis animi odit. 
+            Ilustraciones seleccionadas para estar en los libros de texto nivel básico.
           </p>
           <a href="#" class="boton__tarjeta">Ver más</a>
         </div>
       </div>
-
     </div>
 
-    <h1>Mis novias</h1>
-    <!-- Padre -->
-    <section class="flex_container">
-        <!-- Hijos -->
-            <div class="box__01">
-                Lucy
-            </div>
-            <div class="box__02">
-                Misato
-            </div>
-            <div class="box__03">
-                Fubuki
-            </div>
-            <div class="box__04">
-                Himeno
-            </div>
-    </section> 
+<!--
+    <div class="card">
+      <h5 class="card-header">Mis clases y cursos</h5>
+      <div class="card-body">
+        <h5 class="card-title">Actividad con mis alumnos</h5>
+        <img src="./img/alumnos.jpg" alt="">
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
+    -->
+<!--
+    <div class="mapa">
+      <h1>
+        Encuéntranos
+      </h1>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9526.042768066449!2d-99.7079429574763!3d19.289689744461633!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cd89ad83028e3b%3A0x7966074912a3761!2sFORUM%20ZINA!5e0!3m2!1ses-419!2smx!4v1719452049393!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+-->
+
+  <h1 class="texto__carrusel">
+      EXPLORA LA VARIEDAD DE OBRAS
+  </h1>
+
+    <div id="carouselExampleCaptions" class="carousel slide">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="./img/cabaña.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Cabaña</h5>
+            <p>Óleo sobre lienzo</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./img/morro.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Baño</h5>
+            <p>Coloreado</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="./img/noche.jpg" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Noche</h5>
+            <p>Acuarela</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
 
     <footer>
         <div class="footer">
@@ -162,7 +170,7 @@
             </div>
 
             <div class="contenido__footer">
-                Zdenko Abarca © 2024 Zdencode Todos los derechos reservados
+                Zdencode 2024 © Todos los derechos reservados
 
             </div>
         </div>
