--- a/contacto/soporte.html
+++ b/contacto/soporte.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+    
+    <!--Librería Boostrap-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+   
+   
     <title>Landing Page</title>
 </head>
 <body>
@@ -18,35 +23,47 @@
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li><a href="../galeria/trabajos.html">Galería</a></li>
+            <li><a href="../servicios/ayuda.html">Trayectoria</a></li>
             <li><a href="">Contacto</a></li>
-            <li><a href="../servicios/ayuda.html">Servicios</a></li>
+            
         </ul>
     </nav>
 
-    <section class="hero">
-        <div class="texto__inicio">
-            <h2>Bienvenido</h2>
-            <h3>A mi página WEB</h3>
+    <section class="hero__contacto">
+        <div class="texto__inicio__contacto">
+            <h2>MEDIOS DE CONTACTO</h2>
+            <h3></h3>
         </div>
     </section>
 
-    <h1>Mis novias</h1>
+    <h1></h1>
     <!-- Padre -->
-    <section class="flex_container">
+    <section class="flex_container__contacto">
         <!-- Hijos -->
-            <div class="box__01">
-                Lucy
-            </div>
-            <div class="box__02">
-                Misato
-            </div>
-            <div class="box__03">
-                Fubuki
-            </div>
-            <div class="box__04">
-                Himeno
-            </div>
+         <div class="foto__contacto">
+            <h1></h1>
+        </div>
     </section> 
+ 
+    <section id="contacto" class="contacto__section">
+        <h2></h2>
+        <div class="contacto__container">
+            <div class="contacto__item">
+                <i class="fas fa-phone"></i>
+                <a href="tel:+1234567890">+52 722 149 2982</a>
+            </div>
+            <div class="contacto__item">
+                <i class="fas fa-envelope"></i>
+                <a href="mailto:info@example.com">arteplantel@gmail.com</a>
+            </div>
+                <div class="mapa">
+                    <h1 class="mapa__texto">
+                      UBICACIÓN
+                    </h1>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9526.042768066449!2d-99.7079429574763!3d19.289689744461633!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cd89ad83028e3b%3A0x7966074912a3761!2sFORUM%20ZINA!5e0!3m2!1ses-419!2smx!4v1719452049393!5m2!1ses-419!2smx" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  </div>
+        </div>
+    </section>
 
     <footer>
         <div class="footer">
@@ -67,10 +84,14 @@
             </div>
 
             <div class="contenido__footer">
-                Zdenko Abarca © 2024 Zdencoder Todos los derechos reservados
+                Zdencode 2024 © Todos los derechos reservados
 
             </div>
         </div>
     </footer>
+
+     <!--Librería Bootstrap JavaScript-->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+
 </body>
 </html>
